fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ body {
  overflow-y: hidden;
  }
 
+#siteContent {
+  overflow: hidden;
+}
+
 #slogan {
 	 height: 81vh;
 	 display: table;
@@ -135,8 +139,7 @@ body {
  flex-wrap: wrap;
  max-height: 65vh;
  min-height: 20px;
- overflow-y: scroll;
-
+ overflow-y: hidden;
 }
 
 #spacer {
